# sample_cmake_cs1010

./: CMakeLists.txt  README.md  compile_commands.json
src/: test.c
